@@ -703,6 +703,7 @@ void initfont(void)
 	c_api[2] = &font_initialized;
 	apiobj = PyCObject_FromVoidPtr(c_api, NULL);
 	PyDict_SetItemString(dict, PYGAMEAPI_LOCAL_ENTRY, apiobj);
+	Py_DECREF(apiobj);
 
 	/*imported needed apis*/
 	import_pygame_base();
